2012-07-02  Kirit Saelensminde  <kirit@felspar.com>
 Silenced a clang warning that turns up under some circumstances.

2012-06-30  Kirit Saelensminde  <kirit@felspar.com>
 Added configuration for the log level for the stdout global logger.

2012-05-26  Kirit Saelensminde  <kirit@felspar.com>
 Changed the logging DSL for logging JSON objects thanks to suggestions from jeroen Vermeulen.

2012-04-16  Kirit Saelensminde  <kirit@felspar.com>
 Finally implemented the decode portion of base 64 support.
 Implemented a new logging DSL that makes it much simpler to create JSON objects in the log. Look at fost-base/Cpp/fost-core/log-tests.cpp for an example.

2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up a problem where the crypto++ library wasn't installing properly on Windows.

2012-04-07  Kirit Saelensminde  <kirit@felspar.com>
 Renamed the fostlib::logging namespace to fostlib::log to make it shorter.

2012-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Added coercions from fostlib::utf8_string.to std::vector<unsigned char>.
 Fixed up the JSON and string representations of the timestamps so they are more ISO like and have an explicit UTC time zone.

2012-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Added coercions between fostlib::json and fostlib::jcursor.

2012-02-12  Kirit Saelensminde  <kirit@felspar.com>
 Made some minor changes suggested by clang, including some dead code elimination.

2012-01-30  Kirit Saelensminde  <kirit@felspar.com>
 MSVC 10 supports stdint.h so changed the configuration to use that.

2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up the fost-exe build target type so the fost-cli library is properly installed.

2012-01-25  Kirit Saelensminde  <kirit@felspar.com>
 Explicitly initialise some variables that were set before being returned in order to silence a compiler warning.

2012-01-24  Kirit Saelensminde  <kirit@felspar.com>